--- a/review/src/main/resources/templates/MoviePage/MoviePageMain.html
+++ b/review/src/main/resources/templates/MoviePage/MoviePageMain.html
@@ -16,23 +16,25 @@
     <!-- 요소들 append 들어갈 부분 -->
 </div>
 <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
-<script>
-    function goEachMovieInfo(movieName) {
-        $.ajax({
-            type: "GET",
-            url: "/EachMovie/getMovieInfo",
-            data: movieName,
-            success: function (result) {
-
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("통신 실패.");
-            }
-        });
-    }
+<script charset="utf-8">
+    window.test = function(name){
+        const newWindow = window.open("about:blank");
+        newWindow.location.href="/EachMovie/getMovieInfo?photoOriName="+name;
+        // $.ajax({
+        //     type: "POST",
+        //     url: "/EachMovie/getMovieInfo",
+        //     data: photoOriName,
+        //     success: function () {
+        //
+        //     },
+        //     error: function (XMLHttpRequest, textStatus, errorThrown) {
+        //         alert("통신 실패.");
+        //     }
+        // });
+    };
 
     $('#movieView').click(function () {
-        const data = $("#movieName");
+        var data = $("#movieName");
         $.ajax({
             type: "POST",
             url: "/oneMovie/viewOneMovie",
@@ -40,12 +42,11 @@
             success: function (jpaMovieInfos) {
                 $('div').empty(); // append결과 초기화
                 for (const i in jpaMovieInfos) {
-
-
-                    $('div').append('<img id="moviePoster" src="' + jpaMovieInfos[i].photoUri + '" onclick="goEachMovieInfo(' + jpaMovieInfos[i].photoOriName + ');">');
-                    $('div').append('<h3 th:type="hidden" name="movieName" onclick="goEachMovieInfo(' + jpaMovieInfos[i].photoOriName + ');" >' + jpaMovieInfos[i].movieName + '</h3>');
-
-
+                    const value = jpaMovieInfos[i].photoUri;
+                    $('div').append('<img id="moviePoster" src="' + jpaMovieInfos[i].photoUri + '" >');
+                    $('div').append('<h3 onclick="test(\''+value+'\')" type="hidden" name="movieName" id="goEachMovieInfo" >' + jpaMovieInfos[i].movieName + '</h3>');
+                    // String 값을 전달해주기 위해 정규표현식 사용
+                    // \'' + value + '\'
 
                     // $('div').append('<h3 th:type="hidden" name="storyLine">'+jpaMovieInfos[i].storyLine+'</h3>');
                     // $('div').append('<h3 th:type="hidden" name="openYear" >'+jpaMovieInfos[i].openYear+'</h3>');
@@ -83,7 +84,7 @@
                 }
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("통신 실패.")
+                alert("통신 실패.");
             }
         });
     });
