--- a/review/src/main/resources/templates/MoviePage/MoviePageMain.html
+++ b/review/src/main/resources/templates/MoviePage/MoviePageMain.html
@@ -17,9 +17,9 @@
 </div>
 <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
 <script charset="utf-8">
-    window.test = function(name){
+    window.test = function(photoOriName){
         const newWindow = window.open("about:blank");
-        newWindow.location.href="/EachMovie/getMovieInfo?photoOriName="+name;
+        newWindow.location.href="/EachMovie/getMovieInfo?photoOriName="+photoOriName;
         // $.ajax({
         //     type: "POST",
         //     url: "/EachMovie/getMovieInfo",
