--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -12,7 +12,13 @@
 <input type="button" id="movieView" value="영화조회">
 </br>
 </br>
-
+<img id="moviePoster" th:src="${photoPath}" >
+<h3 name="movieName" th:text="${oneMovieInfo.getMovieName()}"></h3>
+<h3 name="movieDirector" th:text="${oneMovieInfo.getDirectorName()}"></h3>
+<h3 name="openYear" th:text="${oneMovieInfo.getOpenYear()}"></h3>
+<h3 name="StoryLine" th:text="${oneMovieInfo.getStoryLine()}"></h3>
+<h3 name="point" th:text="${oneMovieInfo.getMoviePoint()}"></h3>
+<h3 name="review" th:text="${oneMovieInfo.getMovieReview()}"></h3>
 <div>
     <!-- 요소들 append 들어갈 부분 -->
 </div>
@@ -33,15 +39,15 @@
                     $('div').append('<h3 th:type="hidden" name="movieName" onclick="goEachMovieInfo(' + jpaMovieInfos[i].movieName + ');" >' + jpaMovieInfos[i].movieName + '</h3>');
 
 
-                    $('div').append('<h3 th:type="hidden" name="storyLine">'+jpaMovieInfos[i].storyLine+'</h3>');
-                    $('div').append('<h3 th:type="hidden" name="openYear" >'+jpaMovieInfos[i].openYear+'</h3>');
-                    $('div').append('<h3 th:type="hidden" name="directorName" >'+jpaMovieInfos[i].directorName+'</h3>');
-                    $('div').append('<h3 th:type="hidden" name="moviePoint" >'+jpaMovieInfos[i].moviePoint+'</h3>');
-                    $('div').append('<h3 th:type="hidden" name="directorName" >'+jpaMovieInfos[i].movieReview+'</h3>');
-
-                    $('div').append('<input th:type="text" id = "movieReivew">리뷰작성칸');
-                    $('div').append('<input th:type="text" id = "moviePoint"> 평점');
-                    $('div').append('<input type="button" value="리뷰작성하기"  id="reviewUpload">')
+                    // $('div').append('<h3 th:type="hidden" name="storyLine">' + jpaMovieInfos[i].storyLine + '</h3>');
+                    // $('div').append('<h3 th:type="hidden" name="openYear" >' + jpaMovieInfos[i].openYear + '</h3>');
+                    // $('div').append('<h3 th:type="hidden" name="directorName" >' + jpaMovieInfos[i].directorName + '</h3>');
+                    // $('div').append('<h3 th:type="hidden" name="moviePoint" >' + jpaMovieInfos[i].moviePoint + '</h3>');
+                    // $('div').append('<h3 th:type="hidden" name="directorName" >' + jpaMovieInfos[i].movieReview + '</h3>');
+                    //
+                    // $('div').append('<input th:type="text" id = "movieReivew">리뷰작성칸');
+                    // $('div').append('<input th:type="text" id = "moviePoint"> 평점');
+                    // $('div').append('<input type="button" value="리뷰작성하기"  id="reviewUpload">')
 
                     // 리뷰업로드부분
                     // $('#reviewUpload').click(function () {
