--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -12,13 +12,17 @@
 <input type="button" id="movieView" value="영화조회">
 </br>
 </br>
-<img id="moviePoster" th:src="${photoPath}" >
+<!--<img id="moviePoster" th:src="${photoPath}">-->
 <h3 name="movieName" th:text="${oneMovieInfo.getMovieName()}"></h3>
 <h3 name="movieDirector" th:text="${oneMovieInfo.getDirectorName()}"></h3>
 <h3 name="openYear" th:text="${oneMovieInfo.getOpenYear()}"></h3>
 <h3 name="StoryLine" th:text="${oneMovieInfo.getStoryLine()}"></h3>
 <h3 name="point" th:text="${oneMovieInfo.getMoviePoint()}"></h3>
 <h3 name="review" th:text="${oneMovieInfo.getMovieReview()}"></h3>
+
+<input th:type="text" id = "movieReivew">리뷰작성칸
+<input th:type="text" id = "moviePoint"> 평점
+<input type="button" value="리뷰작성하기"  id="reviewUpload">
 <div>
     <!-- 요소들 append 들어갈 부분 -->
 </div>
@@ -49,30 +53,6 @@
                     // $('div').append('<input th:type="text" id = "moviePoint"> 평점');
                     // $('div').append('<input type="button" value="리뷰작성하기"  id="reviewUpload">')
 
-                    // 리뷰업로드부분
-                    // $('#reviewUpload').click(function () {
-                    //     // json 형식으로 데이터 set
-                    //     var params = {
-                    //         movieReivew : $("#movieReivew").val()
-                    //         ,moviePoint : $("#moviePoint").val()
-                    //     }
-                    //     $.ajax({
-                    //         type:"GET",
-                    //         url: "/oneMovie/reviewUpload",
-                    //         data:params,
-                    //         success: function (result) {
-                    //             if(result ===  1){
-                    //                 alert("리뷰업로드가 완료되었습니다.");
-                    //             }else{
-                    //                 alert("리뷰업로드가 실패했습니다.");
-                    //             }
-                    //         },
-                    //         error: function (XMLHttpRequest, textStatus, errorThrown) {
-                    //             alert("통신 실패.");
-                    //         }
-                    //     });
-                    // });
-
                 }
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) {
@@ -80,6 +60,31 @@
             }
         });
     });
+
+    // 리뷰업로드부분
+    $('#reviewUpload').click(function () {
+        // json 형식으로 데이터 set
+        var params = {
+            movieReivew : $("#movieReivew").val()
+            ,moviePoint : $("#moviePoint").val()
+        }
+        $.ajax({
+            type:"GET",
+            url: "/EachMovie/reviewUpload",
+            data:params,
+            success: function (result) {
+                if(result ===  1){
+                    alert("리뷰업로드가 완료되었습니다.");
+                }else{
+                    alert("리뷰업로드가 실패했습니다.");
+                }
+            },
+            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("통신 실패.");
+            }
+        });
+    });
+
 
 </script>
 </body>
