--- a/review/src/main/resources/templates/MoviePage/MoviePageMain.html
+++ b/review/src/main/resources/templates/MoviePage/MoviePageMain.html
@@ -17,7 +17,7 @@
 </div>
 <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
 <script charset="utf-8">
-    window.test = function(photoOriName){
+    window.goMoviePage = function(photoOriName){
         const newWindow = window.open("about:blank");
         newWindow.location.href="/EachMovie/getMovieInfo?photoOriName="+photoOriName;
     };
@@ -33,7 +33,7 @@
                 for (const i in jpaMovieInfos) {
                     const value = jpaMovieInfos[i].photoUri;
                     $('div').append('<img id="moviePoster" src="' + jpaMovieInfos[i].photoUri + '" >');
-                    $('div').append('<h3 onclick="test(\''+value+'\')" type="hidden" name="movieName" id="goEachMovieInfo" >' + jpaMovieInfos[i].movieName + '</h3>');
+                    $('div').append('제목 : <h3 onclick="goMoviePage(\''+value+'\')" type="hidden" name="movieName" id="goEachMovieInfo" >' + jpaMovieInfos[i].movieName + '</h3>');
                     // String 값을 전달해주기 위해 정규표현식 사용
                     // \'' + value + '\'
 
