페이징처리 구현중..1

--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel='stylesheet' th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}">
 </head>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -26,6 +27,10 @@
 </br>
 </br>
 <input type="button" id="logout" value="로그아웃">
+<th:block th:each="borads : ${boardList}">
+    <span th:text="${borads.getMovieName()}"></span>
+</th:block>
+
 <script>
     $('#logout').click(function () {
         // ajax 통신
