--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -4,41 +4,41 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel='stylesheet' th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main.css}">
 </head>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <body>
-메인페이지입니다.
-</br>
-</br>
-<a href="Join">회원가입</a>
-</br>
-</br>
-<a href="Login">로그인페이지</a>
-</br>
-</br>
-<a href="MyPage">내정보 관리 페이지</a>
-</br>
-</br>
-<a href="Upload">관리자 영화정보 업로드</a>
-</br>
-<br>
-<a href="oneMovie">영화 하나 조회</a>
-</br>
-</br>
-<input type="button" id="logout" value="로그아웃">
-<th:block th:each="borads : ${boardList}">
-    <img th:src="@{/moviePhoto/}+${borads.getPhotoOriName}" th:onclick="goMoviePage([[${borads.getPhotoOriName}]]);">
-    <span th:text="${borads.getMovieName()}" th:onclick="goMoviePage([[${borads.getPhotoOriName}]]);"></span>
-    </br>
-    </br>
-</th:block>
-<ul>
-    <!-- 전체 페이지수를 기준으로, 반복하며 page를 늘린다. -->
-    <li th:each="page : ${#numbers.sequence(0,totalPage -1)}">
-        <a th:href="@{/?page=}+${pageStat.index}" th:text="${pageStat.index+1}"></a>
-    </li>
-</ul>
+<header>
+    <div class="title">
+        <b>Film Project</b>
+    </div>
+    <div class="Info">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="영화 제목을 검색해보세요!" id="movieName" name="movieName" th:field="${movieInfo.movieName}" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button"  id="movieView"><i class="fas fa-search"></i></button>
+        </div>
+        <div class="mypage">
+            <a href="MyPage">마이페이지</a>
+        </div>
+        <div class="logIn">
+            <a href="Login">로그인</a>
+        </div>
+    </div>
+</header>
+
+<div id="columns">
+    <th:block th:each="borads : ${boardList}">
+        <img th:src="@{/moviePhoto/}+${borads.getPhotoOriName}" th:onclick="goMoviePage([[${borads.getPhotoOriName}]]);">
+        <span th:text="${borads.getMovieName()}" th:onclick="goMoviePage([[${borads.getPhotoOriName}]]);"></span>
+        </br>
+        </br>
+    </th:block>
+</div>
+
+<li th:each="page : ${#numbers.sequence(0,totalPage -1)}">
+    <a th:href="@{/?page=}+${pageStat.index}" th:text="${pageStat.index+1}"></a>
+</li>
 
 <script>
     window.goMoviePage = function(photoOriName){
@@ -53,6 +53,34 @@
             url: "/logout",
             success: function (logoutResult) {
                 alert(logoutResult)
+            },
+            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("통신 실패.")
+            }
+        });
+    });
+
+    window.goMoviePage = function(photoOriName){
+        const newWindow = window.open("about:blank");
+        newWindow.location.href="/EachMovie/getMovieInfo?photoOriName="+photoOriName;
+    };
+
+    $('#movieView').click(function () {
+        const data = $("#movieName");
+        $.ajax({
+            type: "POST",
+            url: "/oneMovie/viewOneMovie",
+            data: data,
+            success: function (jpaMovieInfos) {
+                $('div').empty(); // append결과 초기화
+                for (const i in jpaMovieInfos) {
+                    const value = jpaMovieInfos[i].photoUri;
+                    $('div').append('<img id="moviePoster" src="' + jpaMovieInfos[i].photoUri + '" >');
+                    $('div').append('<h3 onclick="goMoviePage(\''+value+'\')" type="hidden" name="movieName" id="goEachMovieInfo" >' + jpaMovieInfos[i].movieName + '</h3>');
+                    // String 값을 전달해주기 위해 정규표현식 사용
+                    // \'' + value + '\'
+
+                }
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) {
                 alert("통신 실패.")
