--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -12,63 +12,87 @@
         color: #dc3545;
     }
 </style>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script src="https://kit.fontawesome.com/cffe88607d.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel='stylesheet' th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/main_detail.css}">
+
+</head>
+
 <body>
-영화제목을 입력해 주세요
-<input type="text" id="movieName" name="movieName" th:field="${movieInfo.movieName}">
-<input type="button" id="movieView" value="영화조회">
-</br>
-</br>
-<img id="moviePoster" th:src="@{/moviePhoto/}+${photoPath}">
-</br>
-영화 제목 : <h3 name="movieName" th:text="${oneMovieInfo.getMovieName()}"></h3>
-감독 이름 :<h3 name="movieDirector" th:text="${oneMovieInfo.getDirectorName()}"></h3>
-개봉일 : <h3 name="openYear" th:text="${oneMovieInfo.getOpenYear()}"></h3>
-시놉시스 : <h3 name="StoryLine" th:text="${oneMovieInfo.getStoryLine()}"></h3>
-<h3 name="TrailerCode" th:utext="${oneMovieInfo.getTrailerCode()}"></h3>
-<th:block th:each="reviews : ${AllReviewInfo}">
-    리뷰단사람 id : <span th:text="${reviews.reviewUser}"></span>
-    </br>
-    </br>
-    리뷰 본문     : <span th:text="${reviews.movieReivew}"></span>
-    </br>
-    </br>
-    영화 점수     : <span th:text="${reviews.moviePoint}"></span>
-    </br>
-    </br>
-</th:block>
-
-
-<div>
-    <div class="field-error" th:field="${ReviewInfo.reviewUser}" th:errors="${ReviewInfo.reviewUser}">
-        로그인 오류
+<header>
+    <div class="container">
+        <div class="main">
+            <a href="/" style="color: #F17F42;"><i class="fas fa-circle fa-2x"></i></a>
+        </div>
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="영화 제목을 검색해보세요!" id="movieName" name="movieName" th:field="${movieInfo.movieName}" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button"  id="movieView"><i class="fas fa-search"></i></button>
+        </div>
+        <div class="mypage"> <!-- 내정보 -->
+            <a href="MyPage" style="color: #F17F42;"><i class="fas fa-user-circle fa-2x"></i></a>
+        </div>
+        <div class="logout"> <!-- 로그인/로그아웃 -->
+            <a href="Login" style="color: #F17F42;"><i class="fas fa-sign-out-alt fa-2x"></i></a>
+        </div>
     </div>
-    <td>리뷰작성</td>
-    <td>
-        <label>
-            <input th:type="text" th:field="${ReviewInfo.movieReivew}" name="movieReivew" id = "movieReivew" th:errorclass="field-error">
-            <div class="field-error" th:errors="${ReviewInfo.movieReivew}">
-                리뷰작성 오류
+</header>
+
+<content>
+    <div class="container">
+        <div class="item"><img src="img/15.jpg"></div>
+        <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/9oKcVikjzag"
+                                  title="YouTube video player" frameborder="0"
+                                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                  allowfullscreen></iframe></div>
+        <div class="item">평가</div> <!-- 피자모형 -->
+        <div class="item" name="movieName" th:text="${oneMovieInfo.getMovieName()}">영화제목</div>
+        <div class="item" name="movieDirector" th:text="${oneMovieInfo.getDirectorName()}">감독이름</div>
+        <div class="item" name="StoryLine" th:text="${oneMovieInfo.getStoryLine()}">줄거리</div>
+        <div class="item">평점 몰아보기 <!-- 디자인작업 필요 -->
+            <th:block th:each="reviews : ${AllReviewInfo}">
+                리뷰단사람 id : <span th:text="${reviews.reviewUser}"></span>
+                </br>
+                리뷰 본문     : <span th:text="${reviews.movieReivew}"></span>
+                </br>
+                영화 점수     : <span th:text="${reviews.moviePoint}"></span>
+                </br>
+            </th:block>
+        </div>
+        <div class="item">내가 쓰는 평점
+            <div>
+                <div class="field-error" th:field="${ReviewInfo.reviewUser}" th:errors="${ReviewInfo.reviewUser}">
+                    로그인 오류
+                </div>
+                <td>리뷰작성</td>
+                <td>
+                    <label>
+                        <input th:type="text" th:field="${ReviewInfo.movieReivew}" name="movieReivew" id = "movieReivew" th:errorclass="field-error">
+                        <div class="field-error" th:errors="${ReviewInfo.movieReivew}">
+                            리뷰작성 오류
+                        </div>
+                    </label>
+                </td>
+
+                <td>점수작성</td>
+                <td>
+                    <label>
+                        <input th:type="text" th:field="${ReviewInfo.moviePoint}" name ="moviePoint" id = "moviePoint"  th:errorclass="field-error">
+                        <div class="field-error" th:errors="${ReviewInfo.moviePoint}">
+                            점수작성 오류
+                        </div>
+                    </label>
+                </td>
+                <input type="button" value="리뷰작성하기"  id="reviewUpload" onclick="window.location.reload()">
             </div>
-        </label>
-    </td>
-
-    <td>점수작성</td>
-    <td>
-        <label>
-            <input th:type="text" th:field="${ReviewInfo.moviePoint}" name ="moviePoint" id = "moviePoint"  th:errorclass="field-error">
-            <div class="field-error" th:errors="${ReviewInfo.moviePoint}">
-                점수작성 오류
-            </div>
-        </label>
-    </td>
-
-    <input type="button" value="리뷰작성하기"  id="reviewUpload" onclick="window.location.reload()">
-</div>
-
-<h4>
-    <!-- 요소들 append 들어갈 부분 -->
-</h4>
-<input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
+        </div>
+    </div>
+</content>
 <script>
     window.goMoviePage = function(photoOriName){
         const newWindow = window.open("about:blank");
@@ -126,3 +150,117 @@
 </script>
 </body>
 </html>
+
+<!--<body>-->
+<!--영화제목을 입력해 주세요-->
+<!--<input type="text" id="movieName" name="movieName" th:field="${movieInfo.movieName}">-->
+<!--<input type="button" id="movieView" value="영화조회">-->
+<!--</br>-->
+<!--</br>-->
+<!--<img id="moviePoster" th:src="@{/moviePhoto/}+${photoPath}">-->
+<!--</br>-->
+<!--영화 제목 : <h3 name="movieName" th:text="${oneMovieInfo.getMovieName()}"></h3>-->
+<!--감독 이름 :<h3 name="movieDirector" th:text="${oneMovieInfo.getDirectorName()}"></h3>-->
+<!--개봉일 : <h3 name="openYear" th:text="${oneMovieInfo.getOpenYear()}"></h3>-->
+<!--시놉시스 : <h3 name="StoryLine" th:text="${oneMovieInfo.getStoryLine()}"></h3>-->
+<!--<h3 name="TrailerCode" th:utext="${oneMovieInfo.getTrailerCode()}"></h3>-->
+<!--<th:block th:each="reviews : ${AllReviewInfo}">-->
+<!--    리뷰단사람 id : <span th:text="${reviews.reviewUser}"></span>-->
+<!--    </br>-->
+<!--    </br>-->
+<!--    리뷰 본문     : <span th:text="${reviews.movieReivew}"></span>-->
+<!--    </br>-->
+<!--    </br>-->
+<!--    영화 점수     : <span th:text="${reviews.moviePoint}"></span>-->
+<!--    </br>-->
+<!--    </br>-->
+<!--</th:block>-->
+
+
+<!--<div>-->
+<!--    <div class="field-error" th:field="${ReviewInfo.reviewUser}" th:errors="${ReviewInfo.reviewUser}">-->
+<!--        로그인 오류-->
+<!--    </div>-->
+<!--    <td>리뷰작성</td>-->
+<!--    <td>-->
+<!--        <label>-->
+<!--            <input th:type="text" th:field="${ReviewInfo.movieReivew}" name="movieReivew" id = "movieReivew" th:errorclass="field-error">-->
+<!--            <div class="field-error" th:errors="${ReviewInfo.movieReivew}">-->
+<!--                리뷰작성 오류-->
+<!--            </div>-->
+<!--        </label>-->
+<!--    </td>-->
+
+<!--    <td>점수작성</td>-->
+<!--    <td>-->
+<!--        <label>-->
+<!--            <input th:type="text" th:field="${ReviewInfo.moviePoint}" name ="moviePoint" id = "moviePoint"  th:errorclass="field-error">-->
+<!--            <div class="field-error" th:errors="${ReviewInfo.moviePoint}">-->
+<!--                점수작성 오류-->
+<!--            </div>-->
+<!--        </label>-->
+<!--    </td>-->
+
+<!--    <input type="button" value="리뷰작성하기"  id="reviewUpload" onclick="window.location.reload()">-->
+<!--</div>-->
+
+<!--<h4>-->
+<!--    &lt;!&ndash; 요소들 append 들어갈 부분 &ndash;&gt;-->
+<!--</h4>-->
+<!--<input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">-->
+<!--<script>-->
+<!--    window.goMoviePage = function(photoOriName){-->
+<!--        const newWindow = window.open("about:blank");-->
+<!--        newWindow.location.href="/EachMovie/getMovieInfo?photoOriName="+photoOriName;-->
+<!--    };-->
+
+<!--    $('#movieView').click(function () {-->
+<!--        const data = $("#movieName");-->
+<!--        $.ajax({-->
+<!--            type: "POST",-->
+<!--            url: "/oneMovie/viewOneMovie",-->
+<!--            data: data,-->
+<!--            success: function (jpaMovieInfos) {-->
+<!--                $('div').empty(); // append결과 초기화-->
+<!--                for (const i in jpaMovieInfos) {-->
+<!--                    const value = jpaMovieInfos[i].photoUri;-->
+<!--                    $('div').append('<img id="moviePoster" src="' + jpaMovieInfos[i].photoUri + '" >');-->
+<!--                    $('div').append('<h3 onclick="goMoviePage(\''+value+'\')" type="hidden" name="movieName" id="goEachMovieInfo" >' + jpaMovieInfos[i].movieName + '</h3>');-->
+<!--                    // String 값을 전달해주기 위해 정규표현식 사용-->
+<!--                    // \'' + value + '\'-->
+
+<!--                }-->
+<!--            },-->
+<!--            error: function (XMLHttpRequest, textStatus, errorThrown) {-->
+<!--                alert("통신 실패.")-->
+<!--            }-->
+<!--        });-->
+<!--    });-->
+
+<!--    // 리뷰업로드부분-->
+<!--    $('#reviewUpload').click(function () {-->
+<!--        // json 형식으로 데이터 set-->
+<!--        var params = {-->
+<!--            movieReivew : $("#movieReivew").val()-->
+<!--            ,moviePoint : $("#moviePoint").val()-->
+<!--        }-->
+<!--        $.ajax({-->
+<!--            type:"GET",-->
+<!--            url: "/EachMovie/reviewUpload",-->
+<!--            data:params,-->
+<!--            success: function (result) {-->
+<!--                if(result ===  1){-->
+<!--                    alert("리뷰업로드가 완료되었습니다.");-->
+<!--                }else{-->
+<!--                    alert("리뷰업로드가 실패했습니다.");-->
+<!--                }-->
+<!--            },-->
+<!--            error: function (XMLHttpRequest, textStatus, errorThrown) {-->
+<!--                alert("통신 실패.");-->
+<!--            }-->
+<!--        });-->
+<!--    });-->
+
+
+<!--</script>-->
+<!--</body>-->
