--- a/review/src/main/resources/templates/MoviePage/EachMovie.html
+++ b/review/src/main/resources/templates/MoviePage/EachMovie.html
@@ -45,11 +45,8 @@
 
 <content>
     <div class="container">
-        <div class="item"><img src="img/15.jpg"></div>
-        <div class="item"><iframe width="560" height="315" src="https://www.youtube.com/embed/9oKcVikjzag"
-                                  title="YouTube video player" frameborder="0"
-                                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                  allowfullscreen></iframe></div>
+        <div class="item"><img id="moviePoster" th:src="@{/moviePhoto/}+${photoPath}"></div>
+        <div class="item" name="TrailerCode" th:utext="${oneMovieInfo.getTrailerCode()}"></div>
         <div class="item">평가</div> <!-- 피자모형 -->
         <div class="item" name="movieName" th:text="${oneMovieInfo.getMovieName()}">영화제목</div>
         <div class="item" name="movieDirector" th:text="${oneMovieInfo.getDirectorName()}">감독이름</div>
