--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -35,10 +35,22 @@
         </br>
     </th:block>
 </div>
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <li class="page-item">
+            <a class="page-link" th:href="@{/?page=}+${nowPage-1}" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+            </a>
+        </li>
+        <li class="page-item" th:each="page : ${#numbers.sequence(0,totalPage -1)}">
+            <a th:href="@{/?page=}+${pageStat.index}" th:text="${pageStat.index+1}"></a>
+        </li>
+        <a class="page-link" th:href="@{/?page=}+${nowPage+1}" aria-label="Next">
+            <span aria-hidden="true">&raquo;</span>
+        </a>
+    </ul>
+</nav>
 
-<li th:each="page : ${#numbers.sequence(0,totalPage -1)}">
-    <a th:href="@{/?page=}+${pageStat.index}" th:text="${pageStat.index+1}"></a>
-</li>
 
 <script>
     window.goMoviePage = function(photoOriName){
