--- a/review/src/main/resources/templates/MainPage/MainPage.html
+++ b/review/src/main/resources/templates/MainPage/MainPage.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel='stylesheet' th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}">
-    <link rel="stylesheet" th:href="@{/css/main.css}">
+    <link rel='stylesheet' th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}"> <!-- 부트스트랩 사용시 좌측코드 복붙 -->
+    <link rel="stylesheet" th:href="@{/css/main.css}"> <!-- css폴더에 css파일 전부다 넣어놓고, 해당 css경로는 얘처럼 작성하기 -->
 </head>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -17,17 +17,26 @@
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="영화 제목을 검색해보세요!" id="movieName" name="movieName" th:field="${movieInfo.movieName}" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-secondary" type="button"  id="movieView"><i class="fas fa-search"></i></button>
+            <!--
+            input태그안에 id="movieName" name="movieName" th:field="${movieInfo.movieName}" 얘네들은건들지 말기. 서버에서 데이터 받아오는부분이다.
+            button태그안에 type을 변경하거나 id값 건들이면 안됌 !
+            -->
         </div>
         <div class="mypage">
-            <a href="MyPage">마이페이지</a>
+            <a href="MyPage">마이페이지</a> <!-- 마이패이지로가는 경로에 들어가는 a href는 좌측코드 복붙 -->
         </div>
         <div class="logIn">
-            <a href="Login">로그인</a>
+            <a href="Login">로그인</a> <!-- 로그인페이지로가는 경로에 들어가는 a href는 좌측코드 복붙 -->
+<!--            <a href="logout">로그아웃</a> 로그아웃페이지로 가는 경로에 들어가는 a href는 좌측코드 복붙. 얘는 지금은 페이지에 없어서 주석처리해놨다.-->
         </div>
     </div>
 </header>
 
 <div id="columns">
+    <!--
+    th:block으로 묶인부분은 서버에서 받아온 list를 반복하며 처리하는 부분.
+    통채로 움직여야 한다. 근데 리뷰를 받아와서 출력하는부분은 block 내부에서 태그위치나 태그추가정도는 해도 될듯 ? 고치기전에 원본코드부분은 주석처리 해놓고 만들자.
+     -->
     <th:block th:each="borads : ${boardList}">
         <img th:src="@{/moviePhoto/}+${borads.getPhotoOriName}" th:onclick="goMoviePage([[${borads.getPhotoOriName}]]);">
         <span th:text="${borads.getMovieName()}" th:onclick="goMoviePage([[${borads.getPhotoOriName}]]);"></span>
@@ -35,6 +44,8 @@
         </br>
     </th:block>
 </div>
+
+<!-- 메인페이지에 맨아래 페이지숫자 나오는부분. 얘네는 중앙에 모이는것만 고치고 색깔이나 디자인부분만 건들면 될듯. 다른건 건들 ㄴㄴ -->
 <nav aria-label="Page navigation example">
     <ul class="pagination">
         <li class="page-item">
