메인페이지 css 위치 작업..1

--- a/review/src/main/resources/static/css/main.css
+++ b/review/src/main/resources/static/css/main.css
@@ -25,23 +25,28 @@ header{
     width: 70%;
     align-items: baseline;
 }
+
 .input-group.mb-3{
     width: 50%;
     margin: 10px;
 }
 
 #columns{
-    float: left;
-    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
     width: 100%;
 }
 
 .moviePoster{
+    position:relative;
     width :30%;
 }
+
 .movieName{
-    width :30%;
+    position:absolute;
+    left: 10px;
 }
+
 #page_move_div{
     position: fixed;
     bottom: 0;
